# YokaiLib

./: CMakeLists.txt  LICENSE.txt  README.md  rand.c
include/YokaiLib/: YokaiExtract.h  YokaiLib.h  YokaiType.h
src/: YokaiExtract.c  YokaiExtract.cpp
